demo-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
  - image: nginx
    name: ngnix-app
    ports:
     - containerPort: 8080
