service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  selector:
    app: nodeapp
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 8080
      nodePort: 31110
