ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mynode-ingress
  namespace: nodejs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: darshan-44.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mynode-app
            port:
              number: 8080
